--- a/src/estilos.css
+++ b/src/estilos.css
@@ -9,6 +9,7 @@ body{
 
 nav{
     height: 100px;
+    box-shadow: 1px 3px 10px black;
 }
 
 #logo{
@@ -44,19 +45,19 @@ main{
 main h1{
     text-align: center;
     color: antiquewhite;
+    margin: 10px 0px;
 }
 
 .card{
     width: 18rem;
     height: 430px;
     margin: 10px;
-
+    box-shadow: 1px 3px 10px black;
 }
 
 .card-body{
     height: 50px;
     width: 18rem;
-
 }
 
 .contenedor{
@@ -68,7 +69,7 @@ main h1{
 }
 
 .precio{
-    padding-left: 80px;
+    padding-left: 70px;
 }
 
 .detalle{
@@ -84,5 +85,123 @@ main h1{
     align-items: center;  
     border-radius: 20px;
     padding-left: 5px;
+    margin-top: 30px;
+    box-shadow: 10px 3px 10px black;
 }
 
+footer{
+    height: auto;
+    display: flex;  
+    justify-content: center;
+    margin-top: 100px;
+    color: antiquewhite;
+    padding: 30px;
+    text-align: center;
+    box-shadow: 1px 3px 10px black;
+}
+
+footer iframe{
+    width: 80%;
+    height: 250px;
+    box-shadow: 1px 3px 10px black;
+}
+
+footer h5{
+    font-size: 25px;
+    font-weight: 500;
+    
+}
+
+footer .navbar-nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 200px;  
+}
+
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    margin-top: 100px;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: #fff;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
