--- a/src/estilos.css
+++ b/src/estilos.css
@@ -60,20 +60,32 @@ main h1{
     width: 18rem;
 }
 
+.card-title{
+  margin-bottom: 20px;
+  height: 30px;
+}
 .contenedor{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-
+    text-align: center;
 }
 
 .precio{
-    padding-left: 70px;
+    text-align: center;
+    padding-bottom: 20px;
+    font-size: 25px;
+}
+
+.precioDestalle{
+  font-size: 25px;  
+  margin-right: 20px;  
 }
 
 .detalle{
     padding-left: 5px;
+
 }
 
 #detalleProd{
@@ -87,6 +99,12 @@ main h1{
     padding-left: 5px;
     margin-top: 30px;
     box-shadow: 10px 3px 10px black;
+}
+
+.contador{
+  display: flex;
+  flex-direction: row;
+  width: 25px;
 }
 
 footer{
@@ -120,9 +138,9 @@ footer .navbar-nav{
 }
 
 .lds-roller {
-    display: inline-block;
-    position: relative;
-    width: 80px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     height: 80px;
     margin-top: 100px;
   }
