--- a/src/estilos.css
+++ b/src/estilos.css
@@ -69,6 +69,13 @@ main h1{
   color: antiquewhite;
 }
 
+.botonIrCart{
+  width: 150px;
+  height: 35px;
+  color: antiquewhite;
+  margin-bottom: 10px;
+}
+
 .btn{
   text-decoration: none;
 }
@@ -99,16 +106,76 @@ main h1{
 }
 
 #detalleProd{
-    width: 80%;
-    height: 16rem;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-    border-radius: 20px;
-    padding-left: 5px;
-    margin-top: 30px;
-    box-shadow: 10px 3px 10px black;
+  width: 80%;
+  height: 16rem;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  border-radius: 20px;
+  padding-left: 5px;
+  margin-top: 30px;
+  box-shadow: 10px 3px 10px black;
+}
+
+#detalleProdCart{
+  width: 100%;
+  height: 10rem;
+  background-color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;  
+  border-radius: 20px;
+  padding: 8px;
+  margin-top: 15px;
+  box-shadow: 10px 3px 10px black;
+}
+
+#detalleProdCart p{
+  margin-bottom: 0px;  
+}
+
+.descProdTotal{
+  display: flex;
+  font-size: 15px;
+}
+
+.descProdTotal p{
+height: 30px;
+
+}
+
+
+.terminarCompra{
+  width: 100%;
+  margin-top: 15px;
+}
+
+.terminarCompra .card{
+  width: 100%;
+  min-height: 200px;
+  height: auto +10px;
+  margin: 0px;
+}
+
+.terminarCompra .card-body{
+  width: 100%;
+  margin: 0px;
+}
+
+.FinalizarCompra{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.btnFinalizarCompra{
+  width: 150px;
+  margin-right: 5px;
+}
+
+.tachoDeBasura{
+  border: none;
 }
 
 .contador{
